--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<scope>runtime</scope>
 
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
