se incluye argon2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.dbname=cursojava
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+security.jwt.secret=ghhg56456gggggdrrt
+security.jwt.issuer=Main
+#security.jwt.ttlMillis=horas * 3600000
+#La session dura una semana
+
+security.jwt.ttlMillis=604800000
